--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.46.0
-pandas==2.2.2
-nltk==3.9.1
-numpy==2.0.2
-sklearn-compat==0.1.3
-sklearn-pandas==2.2.0
-pyngrok==7.2.11
+streamlit==1.32.2
+pandas==2.1.4
+nltk==3.8.1
+numpy==1.26.4
+scikit-learn==1.3.2
+tensorflow==2.17.1
